--- a/product pages/shakechocolate.html
+++ b/product pages/shakechocolate.html
@@ -122,7 +122,7 @@
                     <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
                 </section>
             </footer>
-            <script src="js/shop.js"></script>
-        <script src="js/main.js"></script>
+            <script src="../js/shop.js"></script>
+        <script src="../js/main.js"></script>
         </body>
     </html>
