--- a/shop.html
+++ b/shop.html
@@ -55,163 +55,199 @@
                 <!-- Products -->
                 <div class="product-grid">
                     <div class="product-card" data-category="face" data-id="daycream">
-                        <a href="product pages/daycream.html?product=daycream">
-                            <img src="images/products/Nature's Veil Day cream.png" alt="Day Cream Image">
-                            <h3>Day Cream</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/daycream.html?product=daycream">
+                                <img src="images/products/Nature's Veil Day cream.png" alt="Day Cream Image">
+                                <h3>Day Cream</h3>
+                            </a>
+                        </div>    
                         <p>R299.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face" data-id="nightcream">
-                        <a href="product pages/nightcream.html?product=nightcream">
-                            <img src="images/products/Nature's Veil Night cream.png" alt="Night Cream Image">
-                            <h3>Night Cream</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/nightcream.html?product=nightcream">
+                                <img src="images/products/Nature's Veil Night cream.png" alt="Night Cream Image">
+                                <h3>Night Cream</h3>
+                            </a>
+                        </div>    
                         <p>R299.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face" data-id="facecleanser">
-                        <a href="product pages/facecleanser.html?product=facecleanser">
-                            <img src="images/products/Nature's Veil Soap.png" alt="Face Cleanser Image">
-                            <h3>Face Cleanser</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/facecleanser.html?product=facecleanser">
+                                <img src="images/products/Nature's Veil Soap.png" alt="Face Cleanser Image">
+                                <h3>Face Cleanser</h3>
+                            </a>
+                        </div>    
                         <p>R299.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face" data-id="exfoliator">
-                        <a href="product pages/exfoliator.html?product=exfoliator">
-                            <img src="images/products/Nature's Veil Exfoliator.png" alt="Exfoliator Image">
-                            <h3>Exfoliatior</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/exfoliator.html?product=exfoliator">
+                                <img src="images/products/Nature's Veil Exfoliator.png" alt="Exfoliator Image">
+                                <h3>Exfoliatior</h3>
+                            </a>
+                        </div>    
                         <p>R299.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="face" data-id="facemask">
-                        <a href="product pages/facemask.html?product=facemask">
-                            <img src="images/products/Nature's Veil Face mask.png" alt="Face Mask Image">
-                            <h3>Face Mask</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/facemask.html?product=facemask">
+                                <img src="images/products/Nature's Veil Face mask.png" alt="Face Mask Image">
+                                <h3>Face Mask</h3>
+                            </a>
+                        </div>    
                         <p>R299.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body" data-id="bodylotion">
-                        <a href="product pages/bodylotion.html?product=bodylotion">
-                            <img src="images/products/Nature's Veil Body Lotion.png" alt="Body Lotion Image">
-                            <h3>Body Lotion</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/bodylotion.html?product=bodylotion">
+                                <img src="images/products/Nature's Veil Body Lotion.png" alt="Body Lotion Image">
+                                <h3>Body Lotion</h3>
+                            </a>
+                        </div>    
                         <p>R199.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body" data-id="showergel">
-                        <a href="product pages/showergel.html?product=showergel">
-                            <img src="images/products/Nature's Veil Body Wash.png" alt="Shower Gel Image">
-                            <h3>Shower Gel</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/showergel.html?product=showergel">
+                                <img src="images/products/Nature's Veil Body Wash.png" alt="Shower Gel Image">
+                                <h3>Shower Gel</h3>
+                            </a>
+                        </div>    
                         <p>R199.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body" data-id="bodybutter">
-                        <a href="product pages/bodybutter.html?product=bodybutter">
-                            <img src="images/products/Nature's Veil Body Butter.png" alt="Body Butter Image">
-                            <h3>Body Butter</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/bodybutter.html?product=bodybutter">
+                                <img src="images/products/Nature's Veil Body Butter.png" alt="Body Butter Image">
+                                <h3>Body Butter</h3>
+                            </a>
+                        </div>    
                         <p>R199.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="body" data-id="handcream">
-                        <a href="product pages/handcream.html?product=handcream">
-                            <img src="images/products/Nature's Veil Hand cream (1).png" alt="Hand Cream Image">
-                            <h3>Hand Cream</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/handcream.html?product=handcream">
+                                <img src="images/products/Nature's Veil Hand cream (1).png" alt="Hand Cream Image">
+                                <h3>Hand Cream</h3>
+                            </a>
+                        </div>    
                         <p>R199.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="hair" data-id="shampoo">
-                        <a href="product pages/shampoo.html?product=shampoo">
-                            <img src="images/products/Nature's Veil Shampoo.png" alt="Shampoo Image">
-                            <h3>Shampoo</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/shampoo.html?product=shampoo">
+                                <img src="images/products/Nature's Veil Shampoo.png" alt="Shampoo Image">
+                                <h3>Shampoo</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="hair" data-id="conditioner">
-                        <a href="product pages/conditioner.html?product=conditioner">
-                            <img src="images/products/Nature's Veil Conditioner.png" alt="Conditioner Image">
-                            <h3>Conditioner</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/conditioner.html?product=conditioner">
+                                <img src="images/products/Nature's Veil Conditioner.png" alt="Conditioner Image">
+                                <h3>Conditioner</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="shakes" data-id="shakevanilla">
-                        <a href="product pages/shakevanilla.html?product=shakevanilla">
-                            <img src="images/products/Nature's Veil Shake Vanilla.png" alt="Shake Vanilla Image">
-                            <h3>Lifestyle Shake Vanilla</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/shakevanilla.html?product=shakevanilla">
+                                <img src="images/products/Nature's Veil Shake Vanilla.png" alt="Shake Vanilla Image">
+                                <h3>Lifestyle Shake Vanilla</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="shakes" data-id="shakestrawberry">
-                        <a href="product pages/shakestrawberry.html?product=shakestrawberry">
-                            <img src="images/products/Nature's Veil shake strawberry.png" alt="Shake Strawberry Image">
-                            <h3>Lifestyle Shake Strawberry</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/shakestrawberry.html?product=shakestrawberry">
+                                <img src="images/products/Nature's Veil shake strawberry.png" alt="Shake Strawberry Image">
+                                <h3>Lifestyle Shake Strawberry</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="shakes" data-id="shakechocolate">
-                        <a href="product pages/shakechocolate.html?product=shakechocolate">
-                            <img src="images/products/Nature's Veil shake chocolate.png" alt="Shake Chocolate Image">
-                            <h3>Lifestyle Shake Chocolate</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/shakechocolate.html?product=shakechocolate">
+                                <img src="images/products/Nature's Veil shake chocolate.png" alt="Shake Chocolate Image">
+                                <h3>Lifestyle Shake Chocolate</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins" data-id="iron">
-                        <a href="product pages/iron.html?product=iron">
-                            <img src="images/products/Nature's Veil Iron.png" alt="Iron Vitamin Image">
-                            <h3>Iron</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/iron.html?product=iron">
+                                <img src="images/products/Nature's Veil Iron.png" alt="Iron Vitamin Image">
+                                <h3>Iron</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins" data-id="vitaminc">
-                        <a href="product pages/vitaminc.html?product=vitaminc">
-                            <img src="images/products/Nature's Veil Vitamin C.png" alt="Vitamin C Image">
-                            <h3>Vitamin C</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/vitaminc.html?product=vitaminc">
+                                <img src="images/products/Nature's Veil Vitamin C.png" alt="Vitamin C Image">
+                                <h3>Vitamin C</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins" data-id="d3k2">
-                        <a href="product pages/d3k3.html?product=d3&k2">
-                            <img src="images/products/Nature's Veil D3 & K2.png" alt="D3 & K2 Vitamin Image">
-                            <h3>D3 & K2</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/d3k3.html?product=d3&k2">
+                                <img src="images/products/Nature's Veil D3 & K2.png" alt="D3 & K2 Vitamin Image">
+                                <h3>D3 & K2</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
                     </div>
                     <div class="product-card" data-category="vitamins" data-id="zinc">
-                        <a href="product pages/zinc.html?product=zinc">
-                            <img src="images/products/Nature's Veil Zinc.png" alt="Zinc Vitamin Image">
-                            <h3>Zinc</h3>
-                        </a>
+                        <div class="img-wrap">
+                            <a href="product pages/zinc.html?product=zinc">
+                                <img src="images/products/Nature's Veil Zinc.png" alt="Zinc Vitamin Image">
+                                <h3>Zinc</h3>
+                            </a>
+                        </div>    
                         <p>R149.00</p>
                         <i class="fa-solid fa-heart wishlist-icon"></i>
                         <button class="btn-add">Add to Cart</button>
